[lang] updated language files from Transifex

--- a/resource.language.bg_bg/resources/strings.po
+++ b/resource.language.bg_bg/resources/strings.po
@@ -1617,6 +1617,10 @@ msgctxt "#435"
 msgid "No optical disc drive detected"
 msgstr "Няма оптично устройство"
 
+msgctxt "#436"
+msgid "This video is stored on an optical disc (e.g. DVD, Blu-ray) and cannot be played as your device does not have an appropriate drive."
+msgstr "Това видео се съхранява на диск (като DVD или Blu-ray) и не може да бъде възпроизведено, тъй като не разполагате с подходящо устройство."
+
 msgctxt "#437"
 msgid "Removable disk"
 msgstr "Сменяем диск"
