--- a/resource.language.es_mx/resources/strings.po
+++ b/resource.language.es_mx/resources/strings.po
@@ -1617,6 +1617,10 @@ msgctxt "#435"
 msgid "No optical disc drive detected"
 msgstr "Unidad de disco óptico no detectada"
 
+msgctxt "#436"
+msgid "This video is stored on an optical disc (e.g. DVD, Blu-ray) and cannot be played as your device does not have an appropriate drive."
+msgstr "Este video está almacenado en un disco óptico (ej. DVD, Blu-ray) y no se puede reproducir debido a que tu dispositivo no tiene la unidad requerida."
+
 msgctxt "#437"
 msgid "Removable disk"
 msgstr "Disco extraible"
@@ -7312,6 +7316,10 @@ msgstr "Programa actual"
 msgctxt "#19071"
 msgid "Update interval"
 msgstr "Intervalo de actualización"
+
+msgctxt "#19072"
+msgid "In order to add/update a timer the end date and time must be greater than the start date and time."
+msgstr "Para agregar/actualizar un temporizador la fecha y hora de finalización deben ser posteriores a la fecha y hora de inicio."
 
 msgctxt "#19073"
 msgid "Delay channel switch"
