--- a/resource.language.et_ee/resources/strings.po
+++ b/resource.language.et_ee/resources/strings.po
@@ -1617,6 +1617,10 @@ msgctxt "#435"
 msgid "No optical disc drive detected"
 msgstr "Optilist kettaseadet ei leitud"
 
+msgctxt "#436"
+msgid "This video is stored on an optical disc (e.g. DVD, Blu-ray) and cannot be played as your device does not have an appropriate drive."
+msgstr "See video on salvestatud optilisele kettale (nt DVD, Blu-ray) ja seda ei saa esitada, kuna antud seadmel pole sobivat draivi."
+
 msgctxt "#437"
 msgid "Removable disk"
 msgstr "Väline ketas"
@@ -10767,11 +10771,11 @@ msgstr "Esmasel sisenemisel"
 
 msgctxt "#21472"
 msgid "Include \"All seasons\" and \"Specials\""
-msgstr "Kaasa \"Kõik hooajad\" ja \"Lisaepisoodid\""
+msgstr "Kaasa \"Kõik hooajad\" ja \"Eriepisoodid\""
 
 msgctxt "#21473"
 msgid "Whether or not to consider the items from \"All seasons\" and \"Specials\" in the unwatched item selection."
-msgstr "Kas „Kõik hooajad” ja „Eriperioodid” üksused lisatakse vaatamata üksuste loendisse."
+msgstr "Kas loendite ”Kõik hooajad” ja ”Eriperioodid” üksused märgitakse mitte vaadatuks."
 
 msgctxt "#21474"
 msgid "Neither"
