--- a/resource.language.ko_kr/resources/strings.po
+++ b/resource.language.ko_kr/resources/strings.po
@@ -1617,6 +1617,10 @@ msgctxt "#435"
 msgid "No optical disc drive detected"
 msgstr "광 디스크 드라이브 없음"
 
+msgctxt "#436"
+msgid "This video is stored on an optical disc (e.g. DVD, Blu-ray) and cannot be played as your device does not have an appropriate drive."
+msgstr "이 비디오는 광 디스크 (예. DVD, 블루레이)에 저장되어 적당한 드라이브가 없는 장치에서는 재생할 수 없습니다."
+
 msgctxt "#437"
 msgid "Removable disk"
 msgstr "이동식 디스크"
