--- a/resource.language.sv_se/resources/strings.po
+++ b/resource.language.sv_se/resources/strings.po
@@ -855,7 +855,7 @@ msgstr "Skärmläge"
 
 msgctxt "#241"
 msgid "Full screen #{0:d}"
-msgstr "Fullskärm #{0:d}"
+msgstr "Helskärm #{0:d}"
 
 msgctxt "#242"
 msgid "Windowed"
@@ -867,7 +867,7 @@ msgstr "Uppdateringsfrekvens"
 
 msgctxt "#244"
 msgid "Full screen"
-msgstr "Fullskärm"
+msgstr "Helskärm"
 
 msgctxt "#245"
 msgid "Sizing: ({0:d},{1:d})->({2:d},{3:d}) (Zoom x{4:2.2f}) AR:{5:2.2f}:1 (Pixels: {6:2.2f}:1) (VShift: {7:2.2f})"
@@ -979,7 +979,7 @@ msgstr "Topp 100"
 
 msgctxt "#272"
 msgid "Top-Left overscan compensation"
-msgstr "Övre vänster overscan-kompensation"
+msgstr "Överskanningsersättning uppe till vänster"
 
 msgctxt "#273"
 msgid "Bottom-Right overscan compensation"
@@ -4287,11 +4287,11 @@ msgstr "Radio-tidtagarregler"
 
 msgctxt "#10800"
 msgid "Fullscreen live TV"
-msgstr "Fullskärm live-tv"
+msgstr "Helskärm live-tv"
 
 msgctxt "#10801"
 msgid "Fullscreen radio"
-msgstr "Fullskärm radio"
+msgstr "Helskärm radio"
 
 msgctxt "#10820"
 msgid "Game video filter"
@@ -4331,7 +4331,7 @@ msgstr "Videoinfo"
 
 msgctxt "#12005"
 msgid "Fullscreen video"
-msgstr "Fullskärmsvideo"
+msgstr "Helskärmsvideo"
 
 msgctxt "#12006"
 msgid "Audio visualisation"
@@ -4627,7 +4627,7 @@ msgstr "Skärmsläckare"
 
 msgctxt "#12901"
 msgid "Fullscreen OSD"
-msgstr "Fullskärms-OSD"
+msgstr "Helskärms-OSD"
 
 msgctxt "#12906"
 msgid "Fullscreen game"
@@ -6087,7 +6087,7 @@ msgstr "Fillistor"
 
 msgctxt "#14083"
 msgid "Use fullscreen window"
-msgstr "Använd fullskärmsfönster"
+msgstr "Använd helskärmsfönster"
 
 msgctxt "#14084"
 msgid "Queue songs on selection"
@@ -7707,7 +7707,7 @@ msgstr "Det gick inte att stoppa inspelningen. Kontrollera loggen för mer infor
 
 msgctxt "#19171"
 msgid "Switch to full screen"
-msgstr "Växla till fullskärm"
+msgstr "Växla till helskärm"
 
 msgctxt "#19172"
 msgid "Instant recording duration"
@@ -11467,7 +11467,7 @@ msgstr "(Rensa nuvarande inställning)"
 
 msgctxt "#24041"
 msgid "Install from zip file"
-msgstr "Installera från zipfil"
+msgstr "Installera från zip-fil"
 
 msgctxt "#24042"
 msgid "Downloading {0:d}%"
@@ -11483,7 +11483,7 @@ msgstr "Installerar {0:d}%"
 
 msgctxt "#24045"
 msgid "Failed to install Add-on from zip file"
-msgstr "Misslyckades att installera tillägg ifrån zipfil"
+msgstr "Misslyckades att installera tillägg ifrån zip-fil"
 
 msgctxt "#24046"
 msgid "{0:s} is used by the following installed add-on(s)"
@@ -13227,7 +13227,7 @@ msgstr "Ljuspistol"
 
 msgctxt "#35106"
 msgid "Shoot offscreen"
-msgstr "Skjut offscreen"
+msgstr "Skjut av skärmen"
 
 msgctxt "#35107"
 msgid "Console switches"
@@ -13455,7 +13455,7 @@ msgstr "270°"
 
 msgctxt "#35232"
 msgid "Fullscreen"
-msgstr "Fullskärm"
+msgstr "Helskärm"
 
 msgctxt "#35233"
 msgid "Stretch mode"
@@ -13847,7 +13847,7 @@ msgstr "Ställ in hur lång tid applikationen ska vänta innan skärmsläckaren 
 
 msgctxt "#36130"
 msgid "Select the screensaver. The \"Dim\" screensaver will be forced when fullscreen video playback is paused or a dialogue box is active."
-msgstr "Välj skärmsläckare. Skärmsläckaren \"Dim\" kommer att påtvingas när videouppspelning med fullskärm är pausad eller när en dialogruta är aktiv."
+msgstr "Välj skärmsläckaren. Skärmsläckaren \"Dim\" kommer att påtvingas när videouppspelning i helskärm är pausad eller en dialogruta är aktiv."
 
 msgctxt "#36131"
 msgid "Select to change the screensaver specific settings. Which options are available for configuration depends on the features provided by the screensaver add-on."
@@ -14679,7 +14679,7 @@ msgstr "Skickar automatiskt 'Wake-On-Lan' till servern precis innan du försöke
 
 msgctxt "#36351"
 msgid "Changes the way this application is displayed on the selected screen. Either in a window or fullscreen."
-msgstr "Ändrar hur denna applikation visas på vald skärm. Antingen i ett fönster eller fullskärm."
+msgstr "Ändrar hur denna applikation visas på vald skärm. Antingen i ett fönster eller helskärm."
 
 msgctxt "#36352"
 msgid "Changes the resolution that the user interface is displayed in."
@@ -14691,7 +14691,7 @@ msgstr "Byter uppdateringsfrekvense som användargränsnittet visas i."
 
 msgctxt "#36354"
 msgid "If enabled, fullscreen mode will be applied by using a window instead of a real fullscreen mode. The main benefit is for multi-screen configurations, so that other applications can be used in parallel more easily. This uses more resources so playback may be less smooth."
-msgstr "Om den är aktiverad, kommer fullskärmsläge appliceras genom användning av ett fönster i stället för ett verkligt fullskärmsläge. Den största fördelen är för flerskärmskonfigurationer, så att andra applikationer kan användas parallellt lättare. Detta använder mer resurser så att uppspelningen kan vara mindre slät."
+msgstr "Om den är aktiverad, kommer helskärmsläge appliceras genom användning av ett fönster i stället för ett verkligt helskärmsläge. Den största fördelen är för flerskärmskonfigurationer, så att andra applikationer kan användas parallellt lättare. Detta använder mer resurser så att uppspelningen kan vara mindre slät."
 
 msgctxt "#36355"
 msgid "In a multi-screen configuration, the screens not displaying this application are blacked out."
@@ -14703,7 +14703,7 @@ msgstr "Kalibrera användargränssnittet genom att justera overscan. Använd det
 
 msgctxt "#36359"
 msgid "Use limited colour range (16-235) instead of full colour range (0-255). Limited range should be used if your display is a regular HDMI TV and doesn't have a PC or other mode to display full range colour, however if your display is a PC monitor then leave this disabled to get proper blacks."
-msgstr "Använd begränsad färgrymd (16-235) istället för full färgrymd (0-255). Begränsad färgrymd bör användas om din bildskärm är en vanlig HDMI-tv och inte har ett PC-läge eller annat läge för att återge full färgrymd. Lämna denna avaktiverad om din bildskärm är en PC-bildskärm för att erhålla korrekt svärta."
+msgstr "Använd begränsad färgrymd (16-235) istället för fullfärgsintervall (0-255). Begränsad färgrymd bör användas om din bildskärm är en vanlig HDMI-tv och inte har ett PC-läge eller annat läge för att återge full färgrymd. Lämna denna avaktiverad om din bildskärm är en PC-bildskärm för att erhålla korrekt svärta.\n\nAnvänd begränsat färgintervall (16-235) istället för fullfärgsintervall (0-255). Begränsat intervall bör användas om din bildskärm är en vanlig HDMI-TV och inte har ett PC-läge eller annat läge för att visa fullfärgsfärg, men om din skärm är en PC-bildskärm ska du lämna den här inaktiverad för att erhålla korrekt svärta."
 
 msgctxt "#36360"
 msgid "This category contains the settings for how audio output is handled."
